--- a/.github/workflows/ci-2.yml
+++ b/.github/workflows/ci-2.yml
@@ -37,12 +37,18 @@ jobs:
   create_a_check_run:
     runs-on: ubuntu-latest
     steps:
+      - name: my-app-install token
+        id: my-app
+        uses: getsentry/action-github-app-token@v2
+        with:
+          app_id: ${{ vars.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
       - name: Create a check run
         run: |
           curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{github.token}}"\
+            -H "Authorization: Bearer ${{steps.my-app.outputs.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/check-runs \
             -d '{"name":"mighty_readme","head_sha":"${{github.sha}}","status":"in_progress","external_id":"42","started_at":"2018-05-04T01:14:52Z","output":{"title":"Mighty Readme report","summary":"","text":""}}'
