--- a/.github/workflows/ci-2.yml
+++ b/.github/workflows/ci-2.yml
@@ -51,4 +51,4 @@ jobs:
             -H "Authorization: Bearer ${{steps.my-app.outputs.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/check-runs \
-            -d '{"name":"mighty_readme","head_sha":"${{github.sha}}","status":"in_progress","external_id":"42","started_at":"2018-05-04T01:14:52Z","output":{"title":"Mighty Readme report","summary":"","text":""}}'
+            -d '{"name":"mighty_readme","head_sha":"${{github.sha}}"'
