--- a/.github/workflows/ci-2.yml
+++ b/.github/workflows/ci-2.yml
@@ -36,6 +36,8 @@ jobs:
           echo test, and deploy your project.
   create_a_check_run:
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
     steps:
       - name: my-app-install token
         id: my-app
@@ -48,7 +50,7 @@ jobs:
           curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{steps.my-app.outputs.token}}"\
+            -H "Authorization: Bearer ${{github.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/check-runs \
             -d '{"name":"mighty_readme","head_sha":"${{github.sha}}"'
